src/tests/snapshots/pg_reflex__trigger__tests__delta_sql_snapshots__self_join_delete_passthrough.snap
---
source: src/tests/unit_trigger.rs
expression: sql
---
SELECT public.reflex_rebuild_target_rows('v', $reflex_rebuild$SELECT a.id, a.qty FROM sales a JOIN sales b ON a.id = b.parent_id$reflex_rebuild$)
