src/tests/snapshots/pg_reflex__trigger__tests__delta_sql_snapshots__self_join_insert_aggregate.snap
---
source: src/tests/unit_trigger.rs
expression: sql
---
TRUNCATE "__reflex_intermediate_v"
--<<REFLEX_SEP>>--
INSERT INTO "__reflex_intermediate_v" SELECT a.region, SUM(a.qty) AS qty FROM sales a JOIN sales b ON a.id = b.parent_id GROUP BY a.region
--<<REFLEX_SEP>>--
SELECT public.reflex_rebuild_target_rows('v', $reflex_rebuild$SELECT region, qty FROM __reflex_int_v GROUP BY region$reflex_rebuild$)
